--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "license": "MIT",
   "private": true,
   "dependencies": {
-    "openipdb.ipdb": "*"
+    "openipdb.ipdb": "*",
     "@ipdb/range": "^0.1.1",
     "fast-cidr-tools": "^0.3.1",
     "glob": "^7.2.3",
