--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,7 +20,7 @@ jobs:
       - name: Parse
         run: |
           rm -rf ./data || true
-          pnpm install
+          pnpm install --no-frozen-lockfile
           cp ./node_modules/openipdb.ipdb/openipdb.ipdb /tmp/openipdb.ipdb
           ls -al /tmp/openipdb.ipdb
           pnpm run build
