--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,7 +34,7 @@ jobs:
           fi  
 
           git config --global user.name "github-actions[bot]"
-          git config --global user.email "i@i-meto.com"
+          git config --global user.email "github-actions[bot]@users.noreply.github.com"
           git add .
           git commit -m "[auto] $(date '+%Y-%m-%d %H:%M:%S')"
           git push
