--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,7 +3,7 @@ name: build
 on:
   workflow_dispatch:
   schedule:
-    - cron: "2 * * * *"
+    - cron: '0 1,13 * * *'
 jobs:
   build:
     runs-on: ubuntu-latest
