--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,6 +4,7 @@ on:
   workflow_dispatch:
   schedule:
     - cron: '0 0 * * *'
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -21,6 +22,7 @@ jobs:
         run: |
           rm -rf ./data || true
           pnpm install --no-frozen-lockfile
+          pnpm add openipdb.ipdb@latest --no-save
           cp ./node_modules/openipdb.ipdb/openipdb.ipdb /tmp/openipdb.ipdb
           ls -al /tmp/openipdb.ipdb
           pnpm run build
