--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,8 +21,8 @@ jobs:
       - name: Parse
         run: |
           rm -rf ./data || true
+          rm -f pnpm-lock.yaml
           pnpm install --no-frozen-lockfile
-          pnpm add openipdb.ipdb@latest --no-save
           cp ./node_modules/openipdb.ipdb/openipdb.ipdb /tmp/openipdb.ipdb
           ls -al /tmp/openipdb.ipdb
           pnpm run build
